fix body overflow foolishness

--- a/python_dashing/server/static/js/components/Dashboard.css
+++ b/python_dashing/server/static/js/components/Dashboard.css
@@ -23,7 +23,5 @@ body:global {
   background-color: #222222;
   font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
   width: 100%;
-  min-height: 100%;
-  overflow: hidden;
 }
 
